kubernetes/overlays/homelab-lenovo/traefik/generated/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway

metadata:
  name: traefik
  namespace: traefik

spec:
  gatewayClassName: traefik
  listeners:
    # HTTP to HTTPS redirect
    - name: web
      port: 8000
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same

    # Local Services
    - name: websecure
      port: 8443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: home-assistant-homelab-lenovo-knlim-dev-tls
            kind: Secret
          - name: traefik-homelab-lenovo-knlim-dev-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - home-assistant
                  - traefik
