kubernetes/overlays/homelab-lenovo/traefik/generated/dashboard-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: traefik-dashboard
  namespace: traefik

spec:
  parentRefs:
    - name: traefik
      namespace: traefik
      sectionName: websecure
  hostnames:
    - traefik.homelab-lenovo.knlim.dev
  rules:
    - backendRefs:
        - name: traefik
          port: 8080
